<resources>
    <string name="app_name">AccountManager</string>
    <string name="last_update">Last Update</string>
    <string name="login">Login</string>
    <string name="don_t_have_any_account">Don\'t have any account?</string>
    <string name="signup">SignUp</string>
    <string name="_0987654321">0987654321</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="forget_password">Forget Password</string>
    <string name="signin">Sign In</string>
    <string name="credit">Credit</string>
    <string name="_1000">₹1000</string>
    <string name="debit">Debit</string>
    <string name="balance">Balance</string>
    <string name="updated_yesterday">Updated Yesterday</string>
    <string name="cashbook">Cashbook</string>
    <string name="book_name">Book Name</string>
    <string name="date">DATE</string>
    <string name="add">Add</string>
    <string name="particular">Particular</string>
    <string name="amount">Amount</string>
    <string name="clear">Clear</string>
    <string name="s_n">S.N</string>
    <string name="_17_660">₹ 17,660</string>
    <string name="_17_66099">₹ 17,66099</string>
    <string name="todo">TODO</string>
    <string name="account_name">Account Name</string>
    <string name="category">Category</string>
    <string name="save">Save</string>
    <string name="add_new_account">Add New Account</string>
    <string name="cancel">Cancel</string>
    <string name="_01_jan_2022">01 Jan 2022</string>
    <string name="ifsc_updated_collection_app">IFSC Updated Collection App</string>
    <string name="_23_00">23:00</string>
    <string name="search">Search</string>
</resources>