<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_notify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_3sdp"
        android:background="@color/lightest_gray"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="@dimen/_3sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_3sdp"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="@dimen/_5sdp">

            <TextView
                android:id="@+id/txt_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hero_regular"
                android:maxLines="2"
                android:text="@string/ifsc_updated_collection_app"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sdp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/txt_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/_23_00"
                    android:textColor="@color/color_primary"
                    android:textSize="@dimen/_10sdp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="2"
                    android:text="@string/_01_jan_2022"
                    android:textColor="@color/color_primary"
                    android:textSize="@dimen/_10sdp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</LinearLayout>