<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/_10sdp"
    android:paddingVertical="@dimen/_10sdp">

    <TextView
        android:id="@+id/text_book_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/hero_bold"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/add_new_account"
        android:textColor="@color/black"
        android:textSize="@dimen/_14sdp"
        app:drawableRightCompat="@drawable/baseline_arrow_drop_down_24"
        app:drawableTint="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_5sdp"
        android:paddingVertical="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/hero_bold"
            android:text="@string/account_name"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_border_bg"
            android:inputType="text"
            android:padding="@dimen/_5sdp"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_5sdp"
        android:paddingVertical="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/hero_bold"
            android:text="@string/category"
            android:textSize="@dimen/_12sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/round_border_bg">

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner_lead_status"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_border_bg"
                android:fontFamily="@font/hero_bold"
                android:textSize="@dimen/_8sdp"
                app:ms_hint="__Select Lead Status__"
                app:ms_hint_color="@color/dark_gray"
                app:ms_padding_bottom="@dimen/_5sdp"
                app:ms_padding_left="@dimen/_5sdp"
                app:ms_padding_right="@dimen/_5sdp"
                app:ms_padding_top="@dimen/_5sdp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/color_primary"
            app:cardCornerRadius="@dimen/_20sdp"
            app:layout_constraintBottom_toTopOf="@id/ll_footer">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_btn_background"
                android:fontFamily="@font/hero_regular"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                tools:ignore="DuplicateIds" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginVertical="@dimen/_10sdp"
            android:layout_weight="1"
            android:backgroundTint="@color/color_primary"
            app:cardCornerRadius="@dimen/_20sdp"
            app:layout_constraintBottom_toTopOf="@id/ll_footer">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/custom_btn_background"
                android:fontFamily="@font/hero_regular"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_5sdp"
                android:paddingVertical="@dimen/_10sdp"
                android:text="@string/save"
                android:textColor="@color/white"
                android:textSize="@dimen/_13sdp"
                tools:ignore="DuplicateIds" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>