<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp">

        <TextView
            android:id="@+id/text_checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:fontFamily="@font/hero_bold"
            android:text="Add"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp" />

        <ImageView
            android:id="@+id/ic_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/_10sdp"
            android:src="@drawable/ic_close"
            app:tint="@color/black" />

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/lightest_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/hero_bold"
            android:text="Date"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/edt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_border_bg"
            android:inputType="date"
            android:padding="@dimen/_5sdp"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:drawablePadding="@dimen/_15sdp"
            android:fontFamily="@font/hero_bold"
            android:text="@string/amount"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/edt_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_border_bg"
            android:inputType="number"
            android:padding="@dimen/_5sdp"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="@dimen/_5sdp"
        android:paddingHorizontal="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:fontFamily="@font/hero_bold"
            android:text="@string/particular"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/particular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_border_bg"
            android:inputType="text"
            android:padding="@dimen/_5sdp"
            android:textColorHint="@color/light_gray"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credit"
            android:layout_weight="1"
            android:textSize="@dimen/_12sdp"
            android:padding="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:fontFamily="@font/hero_bold"/>
        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debit"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:padding="@dimen/_5sdp"
            android:layout_weight="1"
            android:textSize="@dimen/_12sdp"
            android:fontFamily="@font/hero_bold"/>
    </RadioGroup>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:backgroundTint="@color/color_primary"
        app:layout_constraintBottom_toTopOf="@id/ll_footer"
        app:cardCornerRadius="@dimen/_20sdp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_btn_background"
            android:fontFamily="@font/hero_regular"
            android:gravity="center"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_10sdp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="@dimen/_13sdp"
            tools:ignore="DuplicateIds" />

    </androidx.cardview.widget.CardView>


</LinearLayout>