<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="true"
    tools:context=".DetailActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:background="@drawable/custom_gradiant_background"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/baseline_arrow_back_24"
            app:tint="@color/white" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_toRightOf="@id/img_back"
            android:orientation="vertical"
            android:padding="@dimen/_2sdp">

            <TextView
                android:id="@+id/text_book_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:fontFamily="@font/hero_bold"
                android:text="@string/book_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_14sdp"
                app:drawableTint="@color/white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_find"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:padding="@dimen/_3sdp"
                android:src="@drawable/baseline_find_in_page_24"
                app:tint="@color/white"
                android:contentDescription="@string/todo" />

            <ImageView
                android:id="@+id/ic_add"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:padding="@dimen/_3sdp"
                android:src="@drawable/baseline_add_24"
                app:tint="@color/white" />

            <ImageView
                android:id="@+id/ic_menu"
                android:layout_width="@dimen/_28sdp"
                android:layout_height="@dimen/_28sdp"
                android:padding="@dimen/_3sdp"
                android:src="@drawable/ic_options"
                app:tint="@color/white" />
        </LinearLayout>
    </RelativeLayout>

    <TableLayout
        android:id="@+id/tab_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:divider="@color/color_primary"
        android:orientation="vertical"
        android:showDividers="middle">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/light_gray"
            android:weightSum="10"
            android:showDividers="middle">

            <TextView
                android:layout_width="@dimen/_15sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hero_regular"
                android:gravity="center"
                android:paddingHorizontal="@dimen/_2sdp"
                android:paddingVertical="@dimen/_4sdp"
                android:text="@string/s_n"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_9sdp" />

            <TextView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hero_regular"
                android:gravity="center"
                android:showDividers="middle"
                android:paddingVertical="@dimen/_4sdp"
                android:text="Date"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:layout_width="@dimen/_115sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hero_regular"
                android:gravity="center"
                android:paddingVertical="@dimen/_4sdp"
                android:text="Particular"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hero_regular"
                android:gravity="center"
                android:paddingVertical="@dimen/_4sdp"
                android:text="Debit"
                android:textColor="@color/text_black"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:layout_width="@dimen/_60sdp"
                android:paddingVertical="@dimen/_4sdp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hero_regular"
                android:gravity="center"
                android:text="@string/credit"
                android:textSize="@dimen/_11sdp" />

        </TableRow>

        <View
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:background="@color/light_gray" />

    </TableLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tab_detail"
        android:id="@+id/recycler_detail"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:background="@drawable/custom_gradiant_background"
        android:paddingVertical="@dimen/_3sdp"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_2sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hero_bold"
                android:text="Credit (↑)"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/text_credit_bal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/hero_bold"
                android:gravity="center"
                android:text="@string/_17_660"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/lightest_gray" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_2sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hero_bold"
                android:text="Debit (↑)"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/text_debit_bal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/hero_bold"
                android:gravity="center"
                android:text="₹ 17,660"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@color/lightest_gray" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_2sdp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/_15sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/hero_bold"
                android:text="Balance"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp" />

            <TextView
                android:id="@+id/text_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:fontFamily="@font/hero_bold"
                android:gravity="center"
                android:text="@string/_17_66099"
                android:textColor="@color/white"
                android:textSize="@dimen/_11sdp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>